Fixed disappeared edit button IE11

--- a/src/components/controlButtons/_control-buttons.scss
+++ b/src/components/controlButtons/_control-buttons.scss
@@ -44,7 +44,6 @@
   .info-component-wrapper {
     flex: 1 1 0%;
     padding-right: rem-calc(7.5px);
-    max-width: rem-calc(800px);
 
     h1 {
       font-family: $font-family-source;
