--- a/src/leases/components/leaseSections/leaseInfo/_lease-info.scss
+++ b/src/leases/components/leaseSections/leaseInfo/_lease-info.scss
@@ -1,5 +1,6 @@
 .lease-info {
   width: 100%;
+  max-width: rem-calc(800px);
 
   label.mvj-form-field-label {
     margin-bottom: rem-calc(2px);
